Add strings to info.plist

--- a/ios/AwesomeProject/Info.plist
+++ b/ios/AwesomeProject/Info.plist
@@ -51,5 +51,8 @@
 	<false/>
   <key>UIStatusBarStyle</key>
   <string>UIStatusBarStyleDefault</string>
+  <key>NSUserTrackingUsageDescription</key>
+  <string>this line will be shown to the user in the pop up when asking for permission</string>
+  
 </dict>
 </plist>
